--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Minor Vendor App</string>
+    <string name="app_name">Luce-E-commerce</string>
     <string name="title_activity_map">Map</string>
     <string name="title_activity_home_screen">ActivityHomeScreen</string>
     <string name="title_home">Home</string>
